@@ -48,6 +48,8 @@ constexpr RideTypeDescriptor MultiDimensionRollerCoasterRTD =
     SET_FIELD(BonusValue, 100),
     SET_FIELD(ColourPresets, TRACK_COLOUR_PRESETS(
         { COLOUR_BRIGHT_PINK, COLOUR_YELLOW, COLOUR_YELLOW }, // X
+        { COLOUR_LIGHT_PURPLE, COLOUR_BRIGHT_RED, COLOUR_BRIGHT_RED },
+        { COLOUR_BORDEAUX_RED, COLOUR_WHITE, COLOUR_WHITE },
         { COLOUR_BRIGHT_RED, COLOUR_BRIGHT_RED, COLOUR_BLACK }, // X2
         { COLOUR_BORDEAUX_RED_DARK, COLOUR_DARK_YELLOW, COLOUR_OLIVE_DARK }, // Dinoconda
         { COLOUR_BLACK, COLOUR_BLACK, COLOUR_GREY }, // Eejanaika
